--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Roboto-Regular"), local("Roboto-Regular"),
+    url("./fonts/Roboto-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: local("Roboto-Bold"), local("Roboto-Bold"),
+    url("./fonts/Roboto-Bold.woff2") format("woff2");
+}
+
 html {
   height: 100%;
 }
